<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    app:cardCornerRadius="45dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/dark_blue_500">

        <TextView
            android:id="@+id/overviewViewPagerCarName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/green_500"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/domowy"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            android:text="@string/marka"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewViewPagerCarName" />

        <TextView
            android:id="@+id/overviewViewPagerBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:gravity="end"
            android:padding="4dp"
            android:text="@string/skoda"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/overviewViewPagerCarName"
            app:layout_constraintTop_toBottomOf="@+id/overviewViewPagerCarName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/model"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewViewPagerBrand" />

        <TextView
            android:id="@+id/overviewViewPagerModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="end"
            android:layout_marginEnd="24dp"
            android:text="@string/fabia"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/overviewViewPagerCarName"
            app:layout_constraintTop_toBottomOf="@+id/overviewViewPagerBrand" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/rok"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewViewPagerModel" />

        <TextView
            android:id="@+id/overviewViewPagerYearOfProduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="end"
            android:layout_marginEnd="24dp"
            android:text="@string/_1999"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/overviewViewPagerCarName"
            app:layout_constraintTop_toBottomOf="@+id/overviewViewPagerModel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/suma_koszt_w"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewViewPagerYearOfProduction" />

        <TextView
            android:id="@+id/overviewViewPagerTotalCosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="end"
            android:layout_marginEnd="24dp"
            android:text="1 000.00 zł"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/overviewViewPagerCarName"
            app:layout_constraintTop_toBottomOf="@+id/overviewViewPagerYearOfProduction" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>