<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    app:cardCornerRadius="45dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/dark_blue_500">

        <TextView
            android:id="@+id/overviewRecyclerViewCarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_500"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/car_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/tankowanie"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewCarName" />

        <TextView
            android:id="@+id/overviewRecyclerViewFueling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="end"
            android:layout_marginEnd="24dp"
            android:text="1 000 000.00 zł"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewCarName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/serwis"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewFueling" />

        <TextView
            android:id="@+id/overviewRecyclerViewService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="end"
            android:layout_marginEnd="24dp"
            android:text="1 000 000.00 zł"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewFueling" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/parkowanie"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewService" />

        <TextView
            android:id="@+id/overviewRecyclerViewParking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="end"
            android:layout_marginEnd="24dp"
            android:text="1 000 000.00 zł"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewService" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/ubezpieczenie"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewParking" />

        <TextView
            android:id="@+id/overviewRecyclerViewInsurance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="end"
            android:layout_marginEnd="24dp"
            android:text="1 000 000.00 zł"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewParking" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/mandat"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewInsurance" />

        <TextView
            android:id="@+id/overviewRecyclerViewTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="end"
            android:layout_marginEnd="24dp"
            android:text="1 000 000.00 zł"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewRecyclerViewInsurance" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>