<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/dark_blue_900"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dark_blue_900"
        tools:context=".fragments.OverviewFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/podsumowanie"
            android:gravity="center"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/overviewCostsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/gara"
            android:gravity="center"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/overviewCarsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />



        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="45dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue_500">

                <TextView
                    android:id="@+id/overviewCarName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green_500"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/koszty_ca_kowite"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/tankowanie"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewCarName" />

                <TextView
                    android:id="@+id/overviewFueling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:gravity="end"
                    android:layout_marginEnd="24dp"
                    android:text="1 000 000.00 zł"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewCarName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/serwis"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewFueling" />

                <TextView
                    android:id="@+id/overviewService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:gravity="end"
                    android:layout_marginEnd="24dp"
                    android:text="1 000 000.00 zł"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewFueling" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/parkowanie"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewService" />

                <TextView
                    android:id="@+id/overviewParking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:gravity="end"
                    android:layout_marginEnd="24dp"
                    android:text="1 000 000.00 zł"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewService" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/ubezpieczenie"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewParking" />

                <TextView
                    android:id="@+id/overviewInsurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:gravity="end"
                    android:layout_marginEnd="24dp"
                    android:text="1 000 000.00 zł"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewParking" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/mandat"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewInsurance" />

                <TextView
                    android:id="@+id/overviewTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:gravity="end"
                    android:layout_marginEnd="24dp"
                    android:text="1 000 000.00 zł"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overviewInsurance" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>